--- a/src/i18n/locales/ar-SA.json
+++ b/src/i18n/locales/ar-SA.json
@@ -72,6 +72,10 @@
 			"command-palette": {
 				"title": "لوحة الأوامر",
 				"description": "الوصول السريع إلى الأوامر والميزات والإعدادات من لوحة الأوامر."
+			},
+			"remap-key-bindings": {
+				"title": "اربط المفتاح",
+				"description": "تبسيط سير العمل عن طريق إنشاء ارتباطات مفاتيح مخصصة."
 			}
 		},
 		"themes": {
