--- a/src/i18n/locales/it-IT.json
+++ b/src/i18n/locales/it-IT.json
@@ -72,6 +72,10 @@
 			"command-palette": {
 				"title": "Palette dei Comandi",
 				"description": "Accedi rapidamente a comandi, funzioni e impostazioni dalla Palette dei Comandi."
+			},
+			"remap-key-bindings": {
+				"title": "Associazioni a tasti Remap",
+				"description": "Semplifica il flusso di lavoro creando combinazioni di tasti personalizzate."
 			}
 		},
 		"themes": {
