--- a/src/i18n/locales/ru-RU.json
+++ b/src/i18n/locales/ru-RU.json
@@ -72,6 +72,10 @@
 			"command-palette": {
 				"title": "Палитра команд",
 				"description": "Быстрый доступ к командам, функциям и настройкам из палитры команд."
+			},
+			"remap-key-bindings": {
+				"title": "Запомнить привязки клавиш",
+				"description": "Создает пользовательские привязки клавиш."
 			}
 		},
 		"themes": {
@@ -93,7 +97,7 @@
 		"share": {
 			"default": "Поделиться средствами системы",
 			"url": "Скопировать ссылку",
-			"tweet": "X",
+			"tweet": "Х",
 			"facebook": "Facebook",
 			"rss": "RSS лента"
 		}
