--- a/src/i18n/locales/uk-UA.json
+++ b/src/i18n/locales/uk-UA.json
@@ -72,6 +72,10 @@
 			"command-palette": {
 				"title": "Палітра Команд",
 				"description": "Швидкий доступ до команд, функцій і налаштувань за допомогою Палітри Команд."
+			},
+			"remap-key-bindings": {
+				"title": "Видалити прив'язки ключів",
+				"description": "Транслюйте ваш робочий процес, створюючи прив'язки для користувацького ключа."
 			}
 		},
 		"themes": {
@@ -93,8 +97,8 @@
 		"share": {
 			"default": "Поділитися засобами системи",
 			"url": "Скопіювати URL-посилання",
-			"tweet": "X",
-			"facebook": "Facebook",
+			"tweet": "Ікс",
+			"facebook": "Фейсбук",
 			"rss": "RSS канал"
 		}
 	},
