--- a/src/i18n/locales/tr-TR.json
+++ b/src/i18n/locales/tr-TR.json
@@ -15,12 +15,12 @@
 			"description": "{FilesName}, yüzlerce katılımcı tarafından sağlanan ve tasarlanan ücretsiz ve açık kaynaklı bir yazılımdır.",
 			"discord": "Tartışmaya Katıl",
 			"docs": "Katkıda Bulunun",
-			"contributions": "{amount, plural, =0 {No contributions} one {# contribution} other {# contributions}}"
+			"contributions": "{amount, plural, =0 {Katkı yok} one {# katkı} other {# katkı}}"
 		},
 		"design": {
 			"chip": "Dizayn",
 			"title": "Güç güzellikle tanıştı.",
-			"description": "Güzel bir Windows öncelikli tasarımı keşfedin. Tüm dosyalarınızı artan verimlilikle yönetin. Sekmelerle birden çok klasörde çalışın. Ve çok daha fazlası.",
+			"description": "Windows'a öncelik veren güzel bir tasarımı keşfedin. Tüm dosyalarınızı daha fazla üretkenlik ile yönetin. Sekmeler ile birden çok klasörde çalışın. Ve çok daha fazlası.",
 			"download": "İndir",
 			"learn_more": "Daha Fazla"
 		},
@@ -31,47 +31,51 @@
 			"unknown": "Bilinmeyen",
 			"cloud": {
 				"title": "Eksiksiz bulut entegrasyonu",
-				"description": "Built-in support for cloud drives such as OneDrive, Google Drive, and iCloud."
+				"description": "OneDrive, Google Drive ve iCloud gibi bulut sürücüler için yerleşik destek."
 			},
 			"preview": {
-				"title": "Preview pane",
-				"description": "Preview photos, videos, and documents without opening them."
+				"title": "Önizleme bölmesi",
+				"description": "Fotoğrafları, videoları ve belgeleri açmadan önizleyin."
 			},
 			"popup-preview": {
-				"title": "QuickLook & SeerPro support",
-				"description": "Preview Office files, documents, and other file types by pressing the space bar. This feature requires installing QuickLook or SeerPro."
+				"title": "QuickLook ve SeerPro desteği",
+				"description": "Boşluk tuşuna basarak Office dosyalarını, belgeleri ve diğer dosya türlerini önizleyin. Bu özellik, QuickLook veya SeerPro yüklemeyi gerektirir."
 			},
 			"tags": {
-				"title": "Tag files and folders",
-				"description": "Organize and sort your files and folders with colored tags."
+				"title": "Dosyaları ve klasörleri etiketleyin",
+				"description": "Dosya ve klasörlerinizi renkli etiketlerle düzenleyin ve sıralayın."
 			},
 			"tabs": {
 				"title": "Sekmelerle çoklu görev",
-				"description": "Avoid multiple windows and keep your desktop clutter-free with tabs."
+				"description": "Birden fazla pencerelerden kaçının ve masaüstünü sekmeler sayesinde derli toplu tutun."
 			},
 			"columns": {
 				"title": "Sütun görünümü",
-				"description": "Quickly navigate through different levels of the file system using the column layout."
+				"description": "Sütun düzenini kullanarak dosya sisteminin farklı seviyelerinde kolayca gezinin."
 			},
 			"archives": {
-				"title": "Arşivleri görüntüle ve düzenle",
-				"description": "Create and extract archives including zip, WinRar, and 7zip."
+				"title": "Arşivleri görüntüleyin ve düzenleyin",
+				"description": "Zip, WinRar ve 7zip kullanarak arşivler oluşturun ve çıkartın."
 			},
 			"git": {
-				"title": "Git integration",
-				"description": "Easily manage your Git projects. Create new branches, switch between them, and sync your changes - all without leaving Files."
+				"title": "Git entegrasyonu",
+				"description": "Git projelerinizi kolayca yönetin. Yeni dallar açın, aralarında gidip gelin, ve tüm değişiklerinizi eşleyin - hem de Files'tan hiç ayrılmadan."
 			},
 			"dual-pane": {
-				"title": "Dual pane",
-				"description": "View and manage two folders side by side with the Dual Pane feature."
+				"title": "Çift bölme",
+				"description": "Çift Bölme özelliği ile iki klasörü yan yana görüntüleyin ve düzenleyin."
 			},
 			"hashes": {
-				"title": "Hashes",
-				"description": "View and compare file hashes from the properties window."
+				"title": "Hashler",
+				"description": "Özellikler penceresinden dosya hashlerini görüntüleyin ve karşılaştırın."
 			},
 			"command-palette": {
-				"title": "Command Palette",
-				"description": "Quickly access commands, features, and settings from the Command Palette."
+				"title": "Komut Paleti",
+				"description": "Komut Paleti'nden komutlara, özelliklere ve ayarlara kolayca erişin."
+			},
+			"remap-key-bindings": {
+				"title": "Remap key bindings",
+				"description": "Streamline you workflow by creating custom key bindings."
 			}
 		},
 		"themes": {
@@ -117,7 +121,7 @@
 		"home": "Ana sayfa",
 		"docs": "Dökümantasyon",
 		"news": "Haberler",
-		"download": "İndirilenler",
+		"download": "İndir",
 		"themes": "Temalar",
 		"discord": "Discord",
 		"github": "GitHub"
@@ -127,16 +131,16 @@
 		"donation_description": "{FilesName} büyümek ve gelişmek için sizin desteğinize bağlı olan, topluluk odaklı bir projedir. Klasik yükleyiciyi kullanıyorsanız lütfen Microsoft Mağazası aracılığıyla {FilesName} satın almayı veya GitHub'da bizi desteklemeyi düşünün.",
 		"donation_button": "Bağış Yap",
 		"microsoft_store": {
-			"title": "Download Files",
+			"title": "Files'ı İndir",
 			"description": "{FilesName}'ı Microsoft Store aracılığıyla satın almak, geliştiricileri desteklemeye yardımcı olur ve uygulamayı yeni özellikler ve geliştirmelerle güncellemeye devam etmemizi sağlar."
 		},
 		"preview": {
 			"title": "Insider Preview",
-			"description": "Önizleme sürümü, Stabil sürümle birlikte kurulabilir ve yeni özelliklere ve iyileştirmelere erken erişim sağlar."
+			"description": "Önizleme sürümü, Kararlı sürümle birlikte kurulabilir ve yeni özelliklere ve iyileştirmelere erken erişim sağlar."
 		},
 		"self_signed": {
-			"link_text": "klasik Yükleyici",
-			"description": "Microsoft Store'a erişiminiz yok mu? bizim "
+			"link_text": "klasik yükleyicimizde olabilir",
+			"description": "Microsoft Store'a erişiminiz yok mu? Çareniz "
 		}
 	}
 }
