--- a/src/i18n/locales/kl-GL.json
+++ b/src/i18n/locales/kl-GL.json
@@ -116,7 +116,8 @@
 		"feedback": "Give Feedback",
 		"style_guide": "Style Guide",
 		"translations": "Translations",
-		"web_team": "Web Team"
+		"support": "Support",
+		"privacy": "Privacy"
 	},
 	"navbar": {
 		"home": "Home",
