fixed typo in Features section

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -75,7 +75,7 @@
 			},
 			"remap-key-bindings": {
 				"title": "Remap key bindings",
-				"description": "Streamline you workflow by creating custom key bindings."
+				"description": "Streamline your workflow by creating custom key bindings."
 			}
 		},
 		"themes": {
