--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,6 +17,14 @@
 			"docs": "Become a contributor",
 			"contributions": "{amount, plural, =0 {No contributions} one {# contribution} other {# contributions}}"
 		},
+		"hero": {
+			"chip": "Hero",
+			"description": "A sleek, open-source file explorer built for Windows, designed to help you organize files and folders with ease.",
+			"download": "Download",
+			"view_on_github": "View on GitHub",
+			"files_is_open_source": "Files is open source!",			
+			"install_on_windows": "Install on Windows"
+		},
 		"design": {
 			"chip": "Design",
 			"title": "Power meets beauty.",
