--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -157,7 +157,7 @@
 		},
 		"self_signed": {
 			"link_text": "getting started page",
-			"description": "View more installation options, and access the free version from our "
+			"description": "View more installation options, and download the free version from our "
 		}
 	}
 }
